--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -1,11 +1,29 @@
+/* Customize CSS native */
+
+/* ********************** Start nav ********************** */
 #mainNav {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  /* ELIMINAR, es solo para pruebas */
   background-color: #212529;
 }
+
+#mainNav .container {
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
 #mainNav .navbar-toggler {
-  padding: 0.75rem;
+  padding: 10px;
   font-size: 0.75rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  text-transform: uppercase;
-  font-weight: 700;
+  border-style: none;
+}
+.navbar-brand > img {
+  width: 60px;
+  height: 18px;
+}
+
+.contact-us {
+  display: none;
+  padding: 15px 30px;
+  background-color: #072ac8;
+  font-size: 17px;
+}
