--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -1,18 +1,26 @@
 /* Customize CSS native */
 
 /* ********************** Start nav ********************** */
-#mainNav {
-  /* ELIMINAR, es solo para pruebas */
-  background-color: #212529;
+nav .container-fluid {
+  padding: 2px 32px;
+}
+nav .container-fluid > img {
+  width: 3.5rem;
+}
+nav . .navbar-toggler-icon {
+  background-image: none;
 }
 
-#mainNav .container {
-  padding-right: 30px;
-  padding-left: 30px;
+nav .toogler-icon {
+  width: 15px;
+  height: 2.5px;
+  background-color: #2b2929;
+  margin: 2px;
+  border-radius: 5px;
 }
 
-#mainNav .navbar-toggler {
-  padding: 10px;
+nav .navbar-toggler {
+  padding: 12px 18px;
   font-size: 0.75rem;
   border-style: none;
 }
@@ -21,9 +29,17 @@
   height: 18px;
 }
 
-.contact-us {
+.notDisplayMobile {
   display: none;
   padding: 15px 30px;
   background-color: #072ac8;
   font-size: 17px;
+}
+
+/* pruebas preview*/
+
+input {
+  background: url(./img/newsletter/icon/mail.svg) no-repeat;
+  background-size: 4vh;
+  text-indent: 47px;
 }
