--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -37,7 +37,7 @@ nav .navbar-toggler {
 }
 
 .notDisplayMobile {
-  display: none;
+  display: none !important;
   padding: 15px 30px;
   background-color: #072ac8;
   font-size: 17px;
@@ -91,6 +91,20 @@ h4 {
   vertical-align: middle;
   display: inline-block;
   margin-top: 40px;
+}
+
+.clientes {
+  display: flex;
+  flex-direction: column;
+  height: 48vh;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.clientes .cliente {
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
 }
 
 /* pruebas preview*/
