--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -7,6 +7,17 @@ body {
   color: #2b2929;
 }
 
+.notDisplayMobile {
+  display: none;
+  /* padding: 15px 30px;
+  background-color: #072ac8;
+  font-size: 17px; */
+}
+
+a {
+  text-decoration: none;
+}
+
 /* ********************** Start nav ********************** */
 nav .container-fluid {
   padding: 2px 32px;
@@ -34,13 +45,6 @@ nav .navbar-toggler {
 .navbar-brand > img {
   width: 60px;
   height: 18px;
-}
-
-.notDisplayMobile {
-  display: none !important;
-  padding: 15px 30px;
-  background-color: #072ac8;
-  font-size: 17px;
 }
 
 /* section #1 */
@@ -105,6 +109,45 @@ h4 {
   width: 100vw;
   display: flex;
   justify-content: space-around;
+}
+
+/* Section2 */
+.projects {
+  margin: 0.5rem 0;
+}
+.projects h2 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 40px;
+  margin-bottom: 1.5rem;
+}
+.projects article {
+  background-color: white;
+  margin: 0 30px 30px;
+}
+.projects img {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+}
+.projects div {
+  padding: 2rem;
+}
+.projects h3 {
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.projects h5 {
+  font-size: 17px;
+  font-weight: 400;
+  margin-bottom: 2.5rem;
+}
+
+.projects a {
+  color: #072ac8;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 /* pruebas preview*/
