--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -298,4 +298,28 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 60px 30px 100px;
+}
+
+footer img {
+  width: 6rem;
+}
+
+footer h4 {
+  margin: 1.5rem 14rem;
+  text-align: center;
+}
+
+footer nav {
+  width: 50vw;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+footer nav > a {
+  color: blue;
+  font-size: 17px;
 }
