--- a/Style/styleTablet.css
+++ b/Style/styleTablet.css
@@ -82,3 +82,13 @@ h1 {
 .services div {
   grid-template-columns: 1fr 1fr 1fr;
 }
+
+/* contact-us */
+.contact-us form {
+  flex-direction: row;
+  align-items: baseline;
+}
+.contact button {
+  width: 10rem;
+  margin-left: 1.5rem;
+}
