--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -303,6 +303,10 @@ footer {
   margin: 60px 30px 100px;
 }
 
+footer > div:nth-child(1) {
+  display: contents;
+}
+
 footer img {
   width: 6rem;
 }
