--- a/Style/styleTablet.css
+++ b/Style/styleTablet.css
@@ -88,7 +88,23 @@ h1 {
   flex-direction: row;
   align-items: baseline;
 }
-.contact button {
+.contact-us button {
   width: 10rem;
   margin-left: 1.5rem;
+}
+
+/* footer */
+footer {
+  flex-direction: row;
+  height: 7rem;
+}
+footer > div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+footer h4 {
+  margin: 0;
+  text-align: start;
 }
