--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -332,17 +332,17 @@ footer nav > a {
 }
 
 /* ********************** Start CONTACT ********************** */
-main {
+.mainContactUs {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
   font-size: 20px;
   font-weight: 400;
 }
-main h1 {
+.mainContactUs h1 {
   margin-left: 30px;
 }
-main form {
+.mainContactUs form {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -350,26 +350,26 @@ main form {
   margin: 0 2rem;
 }
 
-form * {
+.mainContactUs form * {
   width: -webkit-fill-available;
   color: #6b708d;
   font-size: 20px;
   font-weight: 400;
 }
-form ::placeholder {
+.mainContactUs form ::placeholder {
   font-size: 17px;
 }
-form input,
-form textarea {
+.mainContactUs form input,
+.mainContactUs form textarea {
   margin-bottom: 1rem;
   padding: 1rem;
   background-color: rgba(107, 112, 141, 0.1);
   border: none;
 }
-form textarea {
+.mainContactUs form textarea {
   height: 10rem;
 }
-[type="submit"]:not(:disabled) {
+.mainContactUs [type="submit"]:not(:disabled) {
   padding: 1.5rem;
   background-color: #072ac8;
   color: white;
