--- a/Style/styleMobileOrComun.css
+++ b/Style/styleMobileOrComun.css
@@ -401,18 +401,20 @@ footer nav > a {
 }
 
 .dinamicProyect img {
-  width: -moz-available; /* WebKit-based browsers will ignore this. */
-  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
+  width: 90vw;
+  object-fit: cover;
+  max-height: 19rem;
 }
 
 .dinamicProyect .efecto {
   position: absolute;
-  left: 0%;
-  top: 35%;
+  right: -32px;
+  top: -50px;
   z-index: -1;
   opacity: 0.4;
-  filter: saturate(100%) blur(40px);
-  /* height: 40%; */
+  filter: saturate(100%) blur(32px);
+  width: 100vw;
+  max-height: 65vh;
 }
 
 .dinamicProyect p {
@@ -421,4 +423,5 @@ footer nav > a {
 }
 .contenedorImagenes {
   margin: 2rem 0;
+  position: relative;
 }
